--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,14 +3,6 @@ on: [push, pull_request, workflow_dispatch]
 jobs:
   terraform-validate:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - id: 'auth'
-        name: 'Authenticate to Google Cloud'
-        uses: 'google-github-actions/auth@v1'
-        with:
-          workload_identity_provider: 'projects/502036974399/locations/global/workloadIdentityPools/renaissance-man-pool/providers/renaissance-man-provider'
-          service_account: 'terraform@renaissance-man-385715.iam.gserviceaccount.com'
       # TODO consider using Terraform Cloud
       #- name: Set up Terraform Cloud
       #  uses: hashicorp/setup-terraform@v2
@@ -41,6 +33,9 @@ jobs:
     # if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: [terraform-validate, trufflehog]
+    permissions:
+      contents: 'read'
+      id-token: 'write'
     steps:
       - uses: actions/checkout@v3
       - id: 'auth'
