--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,6 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v2
       - name: Lint and validate Terraform plan
         run: |
           cd terraform
@@ -42,10 +44,8 @@ jobs:
           workload_identity_provider: 'projects/502036974399/locations/global/workloadIdentityPools/renaissance-man-pool/providers/renaissance-man-provider'
           service_account: 'terraform@renaissance-man-385715.iam.gserviceaccount.com'
       # TODO consider using Terraform Cloud
-      #- name: Set up Terraform Cloud
-      #  uses: hashicorp/setup-terraform@v2
-      #  with:
-      #    cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v2
       - name: Deploy terraform infrastructure
         run: |
           cd terraform
