--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -43,6 +43,9 @@ jobs:
         with:
           workload_identity_provider: 'projects/502036974399/locations/global/workloadIdentityPools/renaissance-man-pool/providers/renaissance-man-provider'
           service_account: 'terraform@renaissance-man-385715.iam.gserviceaccount.com'
+      - name: Set GOOGLE_APPLICATION_CREDENTIALS
+        run: |
+          export GOOGLE_APPLICATION_CREDENTIALS='${{ steps.auth.outputs.credentials_file_path }}'
       # TODO consider using Terraform Cloud
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
