--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -37,15 +37,15 @@ jobs:
       id-token: 'write'
     steps:
       - uses: actions/checkout@v3
-      - id: 'auth'
-        name: 'Authenticate to Google Cloud'
-        uses: 'google-github-actions/auth@v1'
-        with:
-          workload_identity_provider: 'projects/502036974399/locations/global/workloadIdentityPools/renaissance-man-pool/providers/renaissance-man-provider'
-          service_account: 'terraform@renaissance-man-385715.iam.gserviceaccount.com'
-      - name: Set GOOGLE_APPLICATION_CREDENTIALS
-        run: |
-          export GOOGLE_APPLICATION_CREDENTIALS='${{ steps.auth.outputs.credentials_file_path }}'
+#      - id: 'auth'
+#        name: 'Authenticate to Google Cloud'
+#        uses: 'google-github-actions/auth@v1'
+#        with:
+#          workload_identity_provider: 'projects/502036974399/locations/global/workloadIdentityPools/renaissance-man-pool/providers/renaissance-man-provider'
+#          service_account: 'terraform@renaissance-man-385715.iam.gserviceaccount.com'
+#      - name: Set GOOGLE_APPLICATION_CREDENTIALS
+#        run: |
+#          export GOOGLE_APPLICATION_CREDENTIALS='${{ steps.auth.outputs.credentials_file_path }}'
       # TODO consider using Terraform Cloud
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
