--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -1,9 +1,9 @@
 name: Destroy infrastructure
-on: [workflow_dispatch]
+# TODO uncomment
+#on: [workflow_dispatch]
 jobs:
   destroy-infrastructure:
     runs-on: ubuntu-latest
-    needs: [destroy-kubernetes]
     steps:
       - uses: actions/checkout@v3
       - id: 'auth'
