Added manual trigger
Signed-off-by: Leo Kosta <kostaleonard@gmail.com>

--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -1,6 +1,5 @@
 name: Destroy infrastructure
-# TODO uncomment
-#on: [workflow_dispatch]
+on: [workflow_dispatch]
 jobs:
   destroy-infrastructure:
     runs-on: ubuntu-latest
