--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -7,6 +7,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
+        with:
+          cli_config_credentials_token: ${{ secrets.TERRAFORM_API_TOKEN }}
       - name: Destroy terraform infrastructure
         run: |
           cd terraform
